<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="#E265073B"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/whats_your_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:inputType="textCapWords"/>



    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#5E103B"
        android:text="@string/save" />



</RelativeLayout>